# crypto-sense

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_dashboard.py
scripts/: aggregate_news_sentiment.py  backtest_signal.py  build_signal_dataset.py  eval_fpb_baselines.py  export_signal_model.py  fetch_news_rss.py  fetch_prices.py  make_financial_phrasebank.py  score_news_sentiment.py  train_signal_baselines.py
