[project]
name = "cryptosense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "datasets<4.0.0",
    "fastapi>=0.116.1",
    "feedparser>=6.0.11",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pyqt6>=6.9.1",
    "scikit-learn>=1.7.1",
    "streamlit>=1.49.1",
    "torch>=2.8.0",
    "transformers>=4.56.0",
    "yfinance>=0.2.65",
]
